# ats-plugin-experiment

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  Makefile
cmake/: clang_format.cmake
etc/: logging.yaml  normalize_accept_encoding.lua  obj_store_auth.example.yaml  plugin.config  records.yaml  region_map.config  remap.config  s3_auth_v4.config.example
include/: lmdb-cpp.h
src/: CMakeLists.txt
src/add_header/: add_header.cc
src/hello/: hello.cc
src/lmdb_setup/: lmdb_setup.cc
src/obj_store_auth/: CMakeLists.txt  aws_auth_v4.cc  aws_auth_v4.h  aws_auth_v4_wrap.h  obj_store_auth.cc
src/obj_store_auth/unit_tests/: test_aws_auth_v4.h
src/passthrough/: passthrough.cc
src/remap/: remap.cc
src/remap_echo/: remap_echo.cc
src/remap_header_add/: remap_header_add.cc
tools/: clang-format.sh
