function(add_atsplugin name)
  add_library(${name} MODULE ${ARGN})
  target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/include ${CMAKE_INSTALL_PREFIX}/include)
  target_link_libraries(${name} PRIVATE ${TSAPI_LIBRARY} ${YAMLCPP_LIBRARY} ${LMDB_LIBRARY} ${SWOC_LIBRARY})
  set_target_properties(${name} PROPERTIES PREFIX "")
  set_target_properties(${name} PROPERTIES SUFFIX ".so")
  install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
endfunction()

add_atsplugin(hello hello/hello.cc)
add_atsplugin(add_header add_header/add_header.cc)
add_atsplugin(remap remap/remap.cc)
add_atsplugin(remap_header_add remap_header_add/remap_header_add.cc)
add_atsplugin(remap_passthru remap_passthru/remap_passthru.cc)
add_atsplugin(remap_echo remap_echo/remap_echo.cc)
add_atsplugin(obj_store_auth obj_store_auth/obj_store_auth.cc obj_store_auth/aws_auth_v4.cc)
target_link_libraries(obj_store_auth PRIVATE ${SODIUM_LIBRARY})

add_executable(lmdb_setup lmdb_setup/lmdb_setup.cc)
target_include_directories(lmdb_setup PRIVATE ${PROJECT_SOURCE_DIR}/include ${CMAKE_INSTALL_PREFIX}/include)
target_link_libraries(lmdb_setup PRIVATE ${YAMLCPP_LIBRARY} ${LMDB_LIBRARY} ${SWOC_LIBRARY})
install(TARGETS lmdb_setup ${CMAKE_INSTALL_BINDIR})
